--- a/cn/weapon/DarklightGreatsword.html
+++ b/cn/weapon/DarklightGreatsword.html
@@ -39,11 +39,9 @@
         <main class="main-content">
             <h1>巨剑夜光</h1>
             <p> 
-                巨剑夜光是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                巨剑夜光是一把困难模式的近战武器，由寒元锭制作而成<br>
+                左键发射旋转的刀刃，集中目标后施加霜冻减益
+                
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
             <img src="DarklightGreatsword.png" alt="DarklightGreatsword" class="pwertGIF" loading="lazy">
@@ -58,12 +56,12 @@
 
         <div class="image-block">
             <h1 class="img-Item-Title">巨剑夜光</h1>
-            <img src="DarklightGreatsword.png" alt="DarklightGreatsword">
+            <img src="DarklightGreatsword.gif" alt="DarklightGreatsword">
             <p class="item-id">内部名: DarklightGreatsword</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 75</p>
+            <p class="item-knockback">击退: 6</p>
+            <p class="item-usetimer">使用时间: 30</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 这里是物品在游戏中的描述<br>
