--- a/cn/weapon/DevilsDevastation.html
+++ b/cn/weapon/DevilsDevastation.html
@@ -39,14 +39,14 @@
         <main class="main-content">
             <h1>破灭魔王剑</h1>
             <p> 
-                破灭魔王剑是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                破灭魔王剑是一把月球领主后的近战武器，由破坏重剑和崇高誓约之剑升级而来<br>
+                左键挥舞魔王之剑并召唤一个悬浮在玩家上方的欢愉之戟，短暂悬浮后冲向光标位置，并在击中目标后持续造成伤害<br>
+                九次挥舞之后，下两次攻击被强化，每次转而发射三枚痛苦之轮回，穿透路径上的敌人造成多次伤害<br>
+                最后一次攻击挥剑向前，在光标处召唤六个绯红魔王戟，短暂悬浮后冲向光标位置，穿透路径上的敌人<br>
+                
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="DevilsDevastation.png" alt="DevilsDevastation" class="pwertGIF" loading="lazy">
+            <img src="DevilsDevastation.gif" alt="DevilsDevastation" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +61,14 @@
             <img src="DevilsDevastation.png" alt="DevilsDevastation">
             <p class="item-id">内部名: DevilsDevastation</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 1230</p>
+            <p class="item-knockback">击退: 4</p>
+            <p class="item-usetimer">使用时间: 20</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                每次挥舞会生成一个漂浮在玩家上方的欢愉之戟，会向光标方向飞行，击中敌人后附着在其身上持续造成伤害<br>
+                大挥砍会发射三轮痛苦之轮回，对路径上的敌人造成多次穿透伤害<br>
+                最后会在光标处召唤留给绯红魔王戟，漂浮一段时间后向玩家方向飞行<br>
             </p>
         </div>        
     </div>
