--- a/cn/weapon/DragonsWord.html
+++ b/cn/weapon/DragonsWord.html
@@ -39,14 +39,14 @@
         <main class="main-content">
             <h1>龙言</h1>
             <p> 
-                龙言是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                龙言是一把月球领主后的毕业级魔法书，由归元漩涡升级而来<br>
+                左键在光标处生成三团未成形的龙泪，短暂自选后会化作三团更大的龙泪追踪目标并持续造成伤害<br>
+                龙泪会造成龙焰减益<br>
+                右键施展龙令魔法，在光标处召唤持续扩大的边界圈，在圈内的目标会持续遭受死亡斩击<br>
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">天界</a>
             </p>
-            <img src="DragonsWord.png" alt="DragonsWord" class="pwertGIF" loading="lazy">
+            <img src="DragonsWord.gif" alt="DragonsWord" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +61,14 @@
             <img src="DragonsWord.png" alt="DragonsWord">
             <p class="item-id">内部名: DragonsWord</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 682</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 60</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发射龙泪，自旋一段时间后追踪敌人<br>
+                右键在光标处施展龙令魔法，对范围内的敌人下达死亡的命令<br>
+                “龙一生只能流一次泪”<br>
             </p>
         </div>        
     </div>
