--- a/cn/weapon/MG42.html
+++ b/cn/weapon/MG42.html
@@ -39,14 +39,14 @@
         <main class="main-content">
             <h1>MG42</h1>
             <p> 
-                MG42是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                MG42是一把月球领主后的远程武器，掉落自塔纳托斯<br>
+                左键持续发射子弹<br>
+                将火枪子弹转化为穿甲弹<br>
+                按下快捷键即可开镜<br>
+                连续射击会让枪管过热，视觉上变红<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="MG42.png" alt="MG42" class="pwertGIF" loading="lazy">
+            <img src="MG42.gif" alt="MG42" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +61,14 @@
             <img src="MG42.png" alt="MG42">
             <p class="item-id">内部名: MG42</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 882</p>
+            <p class="item-knockback">击退: 1</p>
+            <p class="item-usetimer">使用时间: 5</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                按下快捷键开镜<br>
+                连续射击会让枪管过热<br>
+                将火枪子弹转化为穿甲弹<br>
             </p>
         </div>        
     </div>
