--- a/cn/weapon/TheBurningSky.html
+++ b/cn/weapon/TheBurningSky.html
@@ -39,14 +39,13 @@
         <main class="main-content">
             <h1>焚灭天惩</h1>
             <p> 
-                焚灭天惩是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                焚灭天惩是一把月球领主后的近战武器，掉落自重生之龙，伢戎<br>
+                左键攻击挥砍，同时在光标处降下一片火球.<br>
+                
+                火球会造成龙焰减益<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="TheBurningSky.png" alt="TheBurningSky" class="pwertGIF" loading="lazy">
+            <img src="TheBurningSky.gif" alt="TheBurningSky" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +60,13 @@
             <img src="TheBurningSky.png" alt="TheBurningSky">
             <p class="item-id">内部名: TheBurningSky</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 1950</p>
+            <p class="item-knockback">击退: 7</p>
+            <p class="item-usetimer">使用时间: 32</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                
+                挥舞让一片火球降下<br>
             </p>
         </div>        
     </div>
