--- a/cn/weapon/Ataraxia.html
+++ b/cn/weapon/Ataraxia.html
@@ -39,14 +39,13 @@
         <main class="main-content">
             <h1>禅心剑</h1>
             <p> 
-                禅心剑是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                禅心剑是一把月球领主后的近战武器，由宇宙锭制作而成或由神明吞噬者掉落<br>
+               左键挥舞发射剑气，在命中目标后产生爆炸，并附加暗影焰减益 <br>
+                
+                <br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="Ataraxia.png" alt="Ataraxia" class="pwertGIF" loading="lazy">
+            <img src="Ataraxia.gif" alt="Ataraxia" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,8 +60,8 @@
             <img src="Ataraxia.png" alt="Ataraxia">
             <p class="item-id">内部名: Ataraxia</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
+            <p class="item-damage">伤害: 405</p>
+            <p class="item-knockback">击退: 2</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
