--- a/cn/weapon/DeathsAscension.html
+++ b/cn/weapon/DeathsAscension.html
@@ -39,14 +39,13 @@
         <main class="main-content">
             <h1>死神擢升</h1>
             <p> 
-                死神擢升是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                死神擢升是一把月球领主后的近战武器，由死神镰刀升级而来<br>
+                左键攻击前六下交替进行上下挥砍，第七下触发回旋斩<br>
+                左键攻击第八下按住使飞镰追寻光标位置，再次松开使玩家飞跃至光标位置，并触发死神半月进行重击<br>
+                右键攻击连续投掷追踪敌人的死神之镰<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="DeathsAscension.png" alt="DeathsAscension" class="pwertGIF" loading="lazy">
+            <img src="DeathsAscension.gif" alt="DeathsAscension" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +60,14 @@
             <img src="DeathsAscension.png" alt="DeathsAscension">
             <p class="item-id">内部名: DeathsAscension</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 1200</p>
+            <p class="item-knockback">击退: 9</p>
+            <p class="item-usetimer">使用时间: 24</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                每三轮挥舞会将巨大化的飞镰掷出<br>
+                按住左键让飞镰追寻光标位置，松开左键触发死神半月<br>
+                右键挥舞都会掷出收个灵魂的死神之镰<br>
             </p>
         </div>        
     </div>
