--- a/cn/weapon/LifehuntScythe.html
+++ b/cn/weapon/LifehuntScythe.html
@@ -39,14 +39,13 @@
         <main class="main-content">
             <h1>猎命镰刀</h1>
             <p> 
-                猎命镰刀是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                猎命镰刀是一把月球领主后的近战武器，由龙蒿锭制作而成<br>
+                左键交替进行上下挥舞，每次向上挥舞分别掷出2、4、6个追踪生命镰刀<br>
+                每三组挥舞后将巨大化的镰刀掷出，短暂在鼠标处旋转后收回<br>
+                
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="LifehuntScythe.png" alt="LifehuntScythe" class="pwertGIF" loading="lazy">
+            <img src="LifehuntScythe.gif" alt="LifehuntScythe" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +60,14 @@
             <img src="LifehuntScythe.png" alt="LifehuntScythe">
             <p class="item-id">内部名: LifehuntScythe</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 156</p>
+            <p class="item-knockback">击退: 7</p>
+            <p class="item-usetimer">使用时间: 22</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                每轮挥舞都会掷出一圈生命镰刀<br>
+                每三轮挥舞会将巨大化的镰刀掷出<br>
+                
             </p>
         </div>        
     </div>
