--- a/cn/weapon/NitroExpressRifle.html
+++ b/cn/weapon/NitroExpressRifle.html
@@ -39,14 +39,12 @@
         <main class="main-content">
             <h1>NE猎枪</h1>
             <p> 
-                NE猎枪是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                NE猎枪是一把困难模式的远程武器武器，由夺命枪或火枪升级而来<br>
+                左键发射子弹<br>
+                将火枪子弹转化为动能弹<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="NitroExpressRifle.png" alt="NitroExpressRifle" class="pwertGIF" loading="lazy">
+            <img src="NitroExpressRifle.gif" alt="NitroExpressRifle" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +59,14 @@
             <img src="NitroExpressRifle.png" alt="NitroExpressRifle">
             <p class="item-id">内部名: NitroExpressRifle</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 210</p>
+            <p class="item-knockback">击退: 7</p>
+            <p class="item-usetimer">使用时间: 70</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                适合崩碎熊的颅骨<br>
+                将火枪子弹转化为动能弹<br>
+                “老旧，但实用”
             </p>
         </div>        
     </div>
