--- a/cn/weapon/Snowblindness.html
+++ b/cn/weapon/Snowblindness.html
@@ -42,7 +42,7 @@
                 雪盲症是一把困难模式的雪球炮系列武器，由雪崩M60和激光步枪升级而来<br>
                 左键发射大量雪球和极寒射线，造成霜冻减益<br>
                 雪球可以追踪目标，并在击中目标时在四周生成数道EX极寒射线打击目标<br>
-                ”雪球炮中最有文采的一位“
+                ”雪球炮中最有文采的一位“<br>
                 
                 
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
