--- a/cn/weapon/DarklightGreatsword.html
+++ b/cn/weapon/DarklightGreatsword.html
@@ -44,7 +44,7 @@
                 
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="DarklightGreatsword.png" alt="DarklightGreatsword" class="pwertGIF" loading="lazy">
+            <img src="DarklightGreatsword.gif" alt="DarklightGreatsword" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -56,7 +56,7 @@
 
         <div class="image-block">
             <h1 class="img-Item-Title">巨剑夜光</h1>
-            <img src="DarklightGreatsword.gif" alt="DarklightGreatsword">
+            <img src="DarklightGreatsword.png" alt="DarklightGreatsword">
             <p class="item-id">内部名: DarklightGreatsword</p>
             <p class="item-property">基本属性</p>
             <p class="item-damage">伤害: 75</p>
