--- a/cn/weapon/NeutronGlaive.html
+++ b/cn/weapon/NeutronGlaive.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>黑域斩切</h1>
             <p> 
-                黑域斩切是一把.....的....武器，掉落.....<br>
+                黑域斩切是一把中子素系列的盗贼武器，由中子星锭在欧米茄物质聚合仪处合成<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
