--- a/cn/weapon/Ataraxia.html
+++ b/cn/weapon/Ataraxia.html
@@ -65,9 +65,9 @@
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                
+                心灵的力量超乎想象<br>
+                
             </p>
         </div>        
     </div>
