--- a/cn/weapon/ExaltedOathblade.html
+++ b/cn/weapon/ExaltedOathblade.html
@@ -39,14 +39,14 @@
         <main class="main-content">
             <h1>崇高誓约之剑</h1>
             <p> 
-                崇高誓约之剑是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                崇高誓约之剑是一把困难模式的近战武器，由誓约与禁忌之刃升级而来<br>
+                左键召唤悬浮在玩家周围的痛苦轮回，短暂时间后冲向鼠标处<br>
+                命中目标时造成暗影焰减益和着火了！减益<br>
+                暴击引发暗影焰爆炸<br>
+                
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="ExaltedOathblade.png" alt="ExaltedOathblade" class="pwertGIF" loading="lazy">
+            <img src="ExaltedOathblade.gif" alt="ExaltedOathblade" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +61,14 @@
             <img src="ExaltedOathblade.png" alt="ExaltedOathblade">
             <p class="item-id">内部名: ExaltedOathblade</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 150</p>
+            <p class="item-knockback">击退:7</p>
+            <p class="item-usetimer">使用时间: 23</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                每次挥舞将生成一个漂浮的痛苦轮回<br>
+                暴击时造成暗影焰爆炸<br>
+                
             </p>
         </div>        
     </div>
