--- a/cn/weapon/NeutronBow.html
+++ b/cn/weapon/NeutronBow.html
@@ -39,14 +39,15 @@
         <main class="main-content">
             <h1>洛希之弦</h1>
             <p> 
-                洛希之弦是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                洛希之弦是一把中子素系列的远程武器，由中子星锭在欧米茄物质聚合仪处合成<br>
+                左键发射重力射线，并在途中留下衍生射线，命中目标后生成数道伽马射线<br>
+                右键进行短暂蓄力，三次蓄力完成后发射三发强大的引力箭矢，命中目标后生成更强大的伽马射线<br>
+                “正在捕捉引力”<br>
+                “正在使引力屈服”<br>
+                "就绪！！"<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="NeutronBow.gif" alt="NeutronBow" class="pwertGIF" loading="lazy">
+            <img src="ANeutronBow.gif" alt="NeutronBow" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +62,14 @@
             <img src="NeutronBow.gif" alt="NeutronBow">
             <p class="item-id">内部名: NeutronBow</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 152</p>
+            <p class="item-knockback">击退: 2.5</p>
+            <p class="item-usetimer">使用时间: 20</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发射重力箭矢，击中目标后生成数道伽马射线<br>
+                右键进行三级蓄力，蓄满能量后将发射三发强大的引力箭矢<br>
+                
             </p>
         </div>        
     </div>
