--- a/cn/weapon/NeutronGlaive.html
+++ b/cn/weapon/NeutronGlaive.html
@@ -39,14 +39,15 @@
         <main class="main-content">
             <h1>黑域斩切</h1>
             <p> 
-                黑域斩切是一把中子素系列的盗贼武器，由中子星锭在欧米茄物质聚合仪处合成<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                黑域斩切是一把中子素系列的战士武器，由中子星锭在欧米茄物质聚合仪处合成<br>
+                左键发射强大的引力波剑气，触碰墙壁后反弹，击中目标将引发中子星爆炸<br>
+                若剑身砍中目标，同样会引发中子星爆炸<br>
+                右键进行蓄力，蓄力过程中剑身会持续伤害触碰目标<br>
+                中断蓄力则发射数道追踪能量<br>
+                蓄力结束后，剑身将变大，松开右键引发一次大型中子星爆炸<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="NeutronGlaive.gif" alt="NeutronGlaive" class="pwertGIF" loading="lazy">
+            <img src="ANeutronGlaive.gif" alt="NeutronGlaive" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +62,14 @@
             <img src="NeutronGlaive.gif" alt="NeutronGlaive">
             <p class="item-id">内部名: NeutronGlaive</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 855</p>
+            <p class="item-knockback">击退: 7.5</p>
+            <p class="item-usetimer">使用时间: 13</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                挥舞将搭设强大的引力波剑气，击中目标后生成一次中子星爆炸<br>
+                右键持剑蓄力，蓄力完成后松开可以再光标处引发一次大型的中子星爆炸<br>
+                蓄力未完成松开则会让能量倾泻而出<br>
             </p>
         </div>        
     </div>
