--- a/cn/weapon/NeutronGun.html
+++ b/cn/weapon/NeutronGun.html
@@ -39,14 +39,14 @@
         <main class="main-content">
             <h1>恒星猎手</h1>
             <p> 
-                恒星猎手是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                恒星猎手是一把中子素系列的的远程武器，由中子星锭在欧米茄物质聚合仪处合成<br>
+                左键发射重力弹丸和伽马射线，命中敌人生成数个翘曲点<br>
+                右键转化为狙击形态，发射强大的引力子弹，命中后降下数道伽马射线<br>
+                狙击状态下每次命中会使武器充能，充能结束后下一次攻击引发中子星爆炸<br>
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="NeutronGun.gif" alt="NeutronGun" class="pwertGIF" loading="lazy">
+            <img src="ANeutronGun.gif" alt="NeutronGun" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +61,14 @@
             <img src="NeutronGun.gif" alt="NeutronGun">
             <p class="item-id">内部名: NeutronGun</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 580</p>
+            <p class="item-knockback">击退: 1</p>
+            <p class="item-usetimer">使用时间: 5</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发射重力弹丸，击中目标后生成翘曲点<br>
+                右键切换为狙击形态，发射更为强大的引力子弹，引力子弹击中目标后让数道伽马射线降落<br>
+                每次开火都会给枪械充能，充能满格后再次开火<br>
             </p>
         </div>        
     </div>
