--- a/cn/weapon/WeaverGrievances.html
+++ b/cn/weapon/WeaverGrievances.html
@@ -39,14 +39,16 @@
         <main class="main-content">
             <h1>怨念编织者</h1>
             <p> 
-                怨念编织者是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                怨念编织者是一把月球领主后的近战武器，由噬魂幽花掉落物合成<br>
+                左键发射六个冤灵之爪，短暂悬浮后飞回玩家所在位置，并穿透途径所有敌人<br>
+                剑身击中敌人时，会附加蓝焰灼烧效果<br>
+                右键进行翻滚，撞击途中的敌人，并在身后留下紫焰灼烧<br>
+                近距离冲刺视为一次完美闪避<br>
+                处在地狱时，怨灵之爪末端会生成大量紫焰灼烧<br>
+                处在地牢时，怨灵之爪末端会生成大量蓝焰灼烧<br>
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="WeaverGrievances.png" alt="WeaverGrievances" class="pwertGIF" loading="lazy">
+            <img src="WeaverGrievances.gif" alt="WeaverGrievances" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +63,14 @@
             <img src="WeaverGrievances.png" alt="WeaverGrievances">
             <p class="item-id">内部名: WeaverGrievances</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 855</p>
+            <p class="item-knockback">击退: 7</p>
+            <p class="item-usetimer">使用时间: 22</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                释放大量怨灵之爪，在地狱、地牢环境中有特殊效果<br>
+                右键向光标方向翻滚，翻滚过程中撞击到敌人会给予玩家无敌帧<br>
+                近距离翻滚将视为一次完美闪避<br>
             </p>
         </div>        
     </div>
