--- a/cn/weapon/HellionFlowerSpear.html
+++ b/cn/weapon/HellionFlowerSpear.html
@@ -39,14 +39,13 @@
         <main class="main-content">
             <h1>刺花长矛</h1>
             <p> 
-                刺花长矛是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                刺花长矛是一把困难模式的近战武器，由永恒锭制作<br>
+                左键进行两次挥砍，并向挥砍方向召唤五个悬停在玩家周围的刺花<br>
+                下一次攻击进行刺击，将刺花向其所在方向刺出<br>
+                
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="HellionFlowerSpear.png" alt="HellionFlowerSpear" class="pwertGIF" loading="lazy">
+            <img src="HellionFlowerSpear.gif" alt="HellionFlowerSpear" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +60,13 @@
             <img src="HellionFlowerSpear.png" alt="HellionFlowerSpear">
             <p class="item-id">内部名: HellionFlowerSpear</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 135</p>
+            <p class="item-knockback">击退: 7</p>
+            <p class="item-usetimer">使用时间: 20</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                “纹身师的好朋友”<br>
+                
             </p>
         </div>        
     </div>
