--- a/cn/weapon/MelodyTheSand.html
+++ b/cn/weapon/MelodyTheSand.html
@@ -39,14 +39,12 @@
         <main class="main-content">
             <h1>沙中曲</h1>
             <p> 
-                沙中曲是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                沙中曲是一把困难模式的魔法武器，掉落自渊海灾虫<br>
+                左键短暂蓄力后，释放一片沙刺，穿透路径上所有敌人<br>
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">天界</a>
             </p>
-            <img src="MelodyTheSand.png" alt="MelodyTheSand" class="pwertGIF" loading="lazy">
+            <img src="MelodyTheSand.gif" alt="MelodyTheSand" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +59,13 @@
             <img src="MelodyTheSand.png" alt="MelodyTheSand">
             <p class="item-id">内部名: MelodyTheSand</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 29</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 20</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                抛射一片沙刺，受重力影响并穿透敌人<br>
+                
             </p>
         </div>        
     </div>
