--- a/cn/weapon/NeutronWand.html
+++ b/cn/weapon/NeutronWand.html
@@ -39,14 +39,13 @@
         <main class="main-content">
             <h1>星墓之光</h1>
             <p> 
-                星墓之光是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                星墓之光是一把中子素系列的魔法武器，由中子星锭在欧米茄物质聚合仪处合成<br>
+                左键发射四颗引力星星，命中目标会留下引力星星持续伤害目标<br>
+                右键在鼠标处施展引力魔法，汇聚法阵。法阵成型后在光标处召唤天降群星打击目标<br>
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">天界</a>
             </p>
-            <img src="NeutronWand.gif" alt="NeutronWand" class="pwertGIF" loading="lazy">
+            <img src="ANeutronWand.gif" alt="NeutronWand" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +60,14 @@
             <img src="NeutronWand.gif" alt="NeutronWand">
             <p class="item-id">内部名: NeutronWand</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 282</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 15</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                发射四颗强大引力星星<br>
+                右键在鼠标处施展重力魔法<br>
+                “传说在远古时期，有一位强大的灵能者用这根法杖将恒星压缩成了黑洞，但已经无从考证，成为星际游牧者口中吟唱的残诗”<br>
             </p>
         </div>        
     </div>
