--- a/cn/weapon/SandDagger.html
+++ b/cn/weapon/SandDagger.html
@@ -39,14 +39,14 @@
         <main class="main-content">
             <h1>潜沙匕首</h1>
             <p> 
-                潜沙匕首是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                潜沙匕首是一把困难模式前的盗贼武器，掉落自荒漠灾虫<br>
+                左键掷出潜沙匕首，对一名目标造成伤害<br>
+                匕首会嵌入沙块，使其短暂延时后爆炸，并爆出两道沙球<br>
+                潜伏攻击投掷强化匕首，可无限穿透目标<br>
+                潜伏攻击的匕首在沙地上会更快地爆炸<br>
+                它的最佳前缀是<a href=""https://calamitymod.wiki.gg/wiki/Modifiers"" class="clickable-word">化境</a>
             </p>
-            <img src="SandDagger.png" alt="SandDagger" class="pwertGIF" loading="lazy">
+            <img src="SandDagger.gif" alt="SandDagger" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +61,14 @@
             <img src="SandDagger.png" alt="SandDagger">
             <p class="item-id">内部名: SandDagger</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 16</p>
+            <p class="item-knockback">击退: 3</p>
+            <p class="item-usetimer">使用时间: 18</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                投掷到沙地上回在一段时间后跳到空中爆炸<br>
+                潜伏攻击会投掷出强化匕首<br>
+                
             </p>
         </div>        
     </div>
