--- a/cn/weapon/SandVortexOfTheDecayedSea.html
+++ b/cn/weapon/SandVortexOfTheDecayedSea.html
@@ -39,14 +39,13 @@
         <main class="main-content">
             <h1>腐海沙涡</h1>
             <p> 
-                腐海沙涡是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                腐海沙涡是一把月球领主后的魔法武器，掉落自硫海遗爵<br>
+                左键抛射四颗蒸馏球，穿透路径上的所有目标<br>
+                蒸馏球在飞行一段时间后会自动飞向附近的目标<br>
+                若附近没有敌人，或触碰到物块，蒸馏球则会消失<br>
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">天界</a>
             </p>
-            <img src="SandVortexOfTheDecayedSea.png" alt="SandVortexOfTheDecayedSea" class="pwertGIF" loading="lazy">
+            <img src="SandVortexOfTheDecayedSea.gif" alt="SandVortexOfTheDecayedSea" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +60,14 @@
             <img src="SandVortexOfTheDecayedSea.png" alt="SandVortexOfTheDecayedSea">
             <p class="item-id">内部名: SandVortexOfTheDecayedSea</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 388</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 30</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                呕出数颗蒸馏球<br>
+                “呕吐大师”<br>
+                
             </p>
         </div>        
     </div>
