--- a/cn/weapon/SeasonalKunai.html
+++ b/cn/weapon/SeasonalKunai.html
@@ -39,14 +39,13 @@
         <main class="main-content">
             <h1>季节苦无</h1>
             <p> 
-                季节苦无是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                季节苦无是一把月球领主后的盗贼武器<br>
+                左键丢出三枚可追踪的季节苦无<br>
+                潜伏攻击丢出若干大型苦无，穿透路径上的敌人，并在飞行末端短暂停留后分裂，爆出更多季节苦无追踪敌人<br>
+                苦无在击中敌人时附加灵液减益<br>
+                它的最佳前缀是<a href="https://calamitymod.wiki.gg/wiki/Modifiers" class="clickable-word">化境</a>
             </p>
-            <img src="SeasonalKunai.png" alt="SeasonalKunai" class="pwertGIF" loading="lazy">
+            <img src="SeasonalKunai.gif" alt="SeasonalKunai" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +60,14 @@
             <img src="SeasonalKunai.png" alt="SeasonalKunai">
             <p class="item-id">内部名: SeasonalKunai</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
+            <p class="item-damage">伤害: 90</p>
+            <p class="item-knockback">击退: 2</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                丢出三枚追踪敌人的苦无<br>
+                潜伏攻击会掷出大型苦无，在飞行轨迹末尾分裂<br>
+                “映射四季”
             </p>
         </div>        
     </div>
