--- a/cn/weapon/SnowQuayMK2.html
+++ b/cn/weapon/SnowQuayMK2.html
@@ -39,14 +39,13 @@
         <main class="main-content">
             <h1>雪蝰MK2</h1>
             <p> 
-                雪蝰MK2是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                雪蝰MK2是一把困难模式的雪球炮系列武器，由雪蝰升级而来.<br>
+                左键发射大量雪球，造成霜冻、冻伤和冰河时代减益<br>
+                雪球命中目标时散发冰雾，并在目标上方抛射额外雪球<br>
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
-            <img src="SnowQuayMK2.png" alt="SnowQuayMK2" class="pwertGIF" loading="lazy">
+            <img src="SnowQuayMK2.gif" alt="SnowQuayMK2" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +60,14 @@
             <img src="SnowQuayMK2.png" alt="SnowQuayMK2">
             <p class="item-id">内部名: SnowQuayMK2</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
+            <p class="item-damage">伤害: 28</p>
+            <p class="item-knockback">击退: 4.5</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                一把大口径雪炮，发射冰雪混合炮弹<br>
+                开火不再需要预热<br>
+                
             </p>
         </div>        
     </div>
