--- a/cn/weapon/TitanArm.html
+++ b/cn/weapon/TitanArm.html
@@ -39,14 +39,12 @@
         <main class="main-content">
             <h1>泰坦手臂</h1>
             <p> 
-                泰坦手臂是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                泰坦手臂是一把困难模式的近战武器，掉落自擎星者<br>
+                长按左键蓄力将目标锤飞，并施加幻星感染减益<br>
+                
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="TitanArm.png" alt="TitanArm" class="pwertGIF" loading="lazy">
+            <img src="TitanArm.gif" alt="TitanArm" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +59,14 @@
             <img src="TitanArm.png" alt="TitanArm">
             <p class="item-id">内部名: TitanArm</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 69</p>
+            <p class="item-knockback">击退: 80</p>
+            <p class="item-usetimer">使用时间: 100</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                蓄力进行势大力沉的挥舞<br>
+                “谁来都要挨一巴掌”<br>
+                
             </p>
         </div>        
     </div>
