--- a/cn/weapon/UnderTheSand.html
+++ b/cn/weapon/UnderTheSand.html
@@ -39,14 +39,12 @@
         <main class="main-content">
             <h1>沙之下</h1>
             <p> 
-                沙之下是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                沙之下是一把困难模式前的魔法武器，掉落自荒漠灾虫<br>
+                左键在背后生成几个沙球，并向鼠标位置飞去<br>
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">天界</a>
             </p>
-            <img src="UnderTheSand.png" alt="UnderTheSand" class="pwertGIF" loading="lazy">
+            <img src="UnderTheSand.gif" alt="UnderTheSand" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +59,13 @@
             <img src="UnderTheSand.png" alt="UnderTheSand">
             <p class="item-id">内部名: UnderTheSand</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
+            <p class="item-damage">伤害: 9</p>
             <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-usetimer">使用时间: 20</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                生成几个沙球<br>
+                
             </p>
         </div>        
     </div>
