--- a/cn/weapon/WastelandFang.html
+++ b/cn/weapon/WastelandFang.html
@@ -39,14 +39,13 @@
         <main class="main-content">
             <h1>荒芜牙猎</h1>
             <p> 
-                荒芜牙猎是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
+                荒芜牙猎是一把困难模式前的近战武器，掉落自荒漠灾虫<br>
+                左键掷出荒芜牙猎，并在末端张开嘴吐出若干沙丘<br>
+                与物块碰撞时会被反弹并加速收回<br>
+                
                 它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
             </p>
-            <img src="WastelandFang.png" alt="WastelandFang" class="pwertGIF" loading="lazy">
+            <img src="WastelandFang.gif" alt="WastelandFang" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +60,14 @@
             <img src="WastelandFang.png" alt="WastelandFang">
             <p class="item-id">内部名: WastelandFang</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
-            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-damage">伤害: 12</p>
+            <p class="item-knockback">击退: 10</p>
+            <p class="item-usetimer">使用时间: 50</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                与物块发生反弹，并加速收回<br>
+                会张开嘴吐出几团沙丘<br>
+                
             </p>
         </div>        
     </div>
