--- a/cn/weapon/WraithKunai.html
+++ b/cn/weapon/WraithKunai.html
@@ -39,14 +39,14 @@
         <main class="main-content">
             <h1>幽魂苦无</h1>
             <p> 
-                幽魂苦无是一把.....的....武器，掉落.....<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                幽魂苦无是一把月球领主后的盗贼武器，<br>
+                左键投掷三枚可追踪的幽魂苦无<br>
+                潜伏攻击向四周丢出一片幽灵匕首，短暂悬停后冲向敌人<br>
+                苦无会对目标施加着火了！减益<br>
+                
+                它的最佳前缀是<a href="https://calamitymod.wiki.gg/wiki/Modifiers" class="clickable-word">化境</a>
             </p>
-            <img src="WraithKunai.png" alt="WraithKunai" class="pwertGIF" loading="lazy">
+            <img src="WraithKunai.gif" alt="WraithKunai" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
@@ -61,14 +61,14 @@
             <img src="WraithKunai.png" alt="WraithKunai">
             <p class="item-id">内部名: WraithKunai</p>
             <p class="item-property">基本属性</p>
-            <p class="item-damage">伤害: 10</p>
-            <p class="item-knockback">击退: 0</p>
+            <p class="item-damage">伤害: 160</p>
+            <p class="item-knockback">击退: 2</p>
             <p class="item-usetimer">使用时间: 10</p>
             <p class="item-property">物品介绍</p>
             <p class="item-description">
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                丢出三枚追踪敌人的苦无<br>
+                潜伏攻击会生成一片悬停在玩家周围的幽灵苦无<br>
+                
             </p>
         </div>        
     </div>
