--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -2058,13 +2058,13 @@
                     <p>怨念编织者</p>
                 </div>
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/Starship.html'">
+                <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/Starship.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/Starship.png" alt="Starship">
                     </div>
                     
                     <p>群星巨舰</p>
-                </div>
+                </div> -->
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/SandDagger.html'">
                     <div class="image-container">
