--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
 </head>
+
 <body>
     <header class="wiki-header">
         <div class="logo">灾厄大修Wiki</div>
@@ -67,6 +69,14 @@
                     </div>
 
                     <p>血色鞭挞</p>
+                </div>
+                
+                <div class="weapon-item" onclick="location.href='/cn/weapon/WhiplashGalactica.html'">
+                    <div class="image-container">
+                        <img src="/cn/weapon/WhiplashGalactica.png" alt="WhiplashGalactica">
+                    </div>
+
+                    <p>银河鞭挞</p>
                 </div>
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/GhostFireWhip.html'">
@@ -427,13 +437,7 @@
                     <p>巨龙之怒</p>
                 </div>
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/WhiplashGalactica.html'">
-                    <div class="image-container">
-                        <img src="/cn/weapon/WhiplashGalactica.png" alt="WhiplashGalactica">
-                    </div>
-
-                    <p>银河鞭挞</p>
-                </div>
+                
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/Excelsus.html'">
                     <div class="image-container">
@@ -587,7 +591,7 @@
                     <p>末晓之殇</p>
                 </div>
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/Greentide.html'">
+                <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/Greentide.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/Greentide.png" alt="Greentide">
                     </div>
@@ -609,7 +613,7 @@
                     </div>
 
                     <p>瘟疫大剑</p>
-                </div>
+                </div> -->
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/BalefulHarvester.html'">
                     <div class="image-container">
@@ -715,13 +719,13 @@
                     <p>叶流</p>
                 </div>
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/Phangasm.html'">
+               <!--  <div class="weapon-item" onclick="location.href='/cn/weapon/Phangasm.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/Phangasm.png" alt="Phangasm">
                     </div>
 
                     <p>幻魔</p>
-                </div>
+                </div> -->
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/Contagion.html'">
                     <div class="image-container">
@@ -747,21 +751,21 @@
                     <p>幽漩风暴</p>
                 </div>
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/ClockGatlignum.html'">
+                <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/ClockGatlignum.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/ClockGatlignum.png" alt="ClockGatlignum">
                     </div>
 
                     <p>发条鳄鱼枪</p>
-                </div>
+                </div> -->
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/ElementalBlaster.html'">
+                <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/ElementalBlaster.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/ElementalBlaster.png" alt="ElementalBlaster">
                     </div>
 
                     <p>元素冲击波</p>
-                </div>
+                </div> -->
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/MarksmanBow.html'">
                     <div class="image-container">
@@ -779,21 +783,21 @@
                     <p>荆棘藤</p>
                 </div>
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/StormDragoon.html'">
+                <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/StormDragoon.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/StormDragoon.png" alt="StormDragoon">
                     </div>
 
                     <p>风暴龙骑士</p>
-                </div>
+                </div> -->
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/Thunderstorm.html'">
+                <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/Thunderstorm.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/Thunderstorm.png" alt="Thunderstorm">
                     </div>
 
                     <p>虚灵步枪</p>
-                </div>
+                </div> -->
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/TyrannysEnd.html'">
                     <div class="image-container">
@@ -835,13 +839,13 @@
                     <p>薄冥之风</p>
                 </div>
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/FetidEmesis.html'">
+                <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/FetidEmesis.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/FetidEmesis.png" alt="FetidEmesis">
                     </div>
 
                     <p>腐臭倾泻者</p>
-                </div>
+                </div> -->
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/BarrenBow.html'">
                     <div class="image-container">
@@ -851,21 +855,21 @@
                     <p>荒芜弓</p>
                 </div>
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/Seadragon.html'">
+                <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/Seadragon.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/Seadragon.png" alt="Seadragon">
                     </div>
 
                     <p>海龙</p>
-                </div>
+                </div> -->
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/ScorchedEarth.html'">
+                <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/ScorchedEarth.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/ScorchedEarth.png" alt="ScorchedEarth">
                     </div>
 
                     <p>焦土</p>
-                </div>
+                </div> -->
 
                 <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/SeasSearing.html'">
             <div class="image-container">
@@ -875,23 +879,23 @@
             <p>海之烧灼</p>
         </div> -->
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/CoralCannon.html'">
+                <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/CoralCannon.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/CoralCannon.png" alt="CoralCannon">
                     </div>
 
                     <p>珊瑚手炮</p>
-                </div>
+                </div> -->
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/AngelicShotgun.html'">
+                <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/AngelicShotgun.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/AngelicShotgun.png" alt="AngelicShotgun">
                     </div>
 
                     <p>圣天耀火炮</p>
-                </div>
+                </div> -->
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/AquashardShotgun.html'">
+               <!--  <div class="weapon-item" onclick="location.href='/cn/weapon/AquashardShotgun.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/AquashardShotgun.png" alt="AquashardShotgun">
                     </div>
@@ -1017,7 +1021,7 @@
                     </div>
 
                     <p>真菌枪</p>
-                </div>
+                </div> -->
 
                 <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/HalleysInferno.html'">
             <div class="image-container">
@@ -1027,7 +1031,7 @@
             <p>哈雷彗星炮</p>
         </div> -->
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/HandheldTank.html'">
+                <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/HandheldTank.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/HandheldTank.png" alt="HandheldTank">
                     </div>
@@ -1089,9 +1093,9 @@
                     </div>
 
                     <p>玷污之疫SMG</p>
-                </div>
+                </div> -->
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/Archerfish.html'">
+                <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/Archerfish.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/Archerfish.png" alt="Archerfish">
                     </div>
@@ -1120,8 +1124,8 @@
                         <img src="/cn/weapon/AuroraBlazer.png" alt="AuroraBlazer">
                     </div>
 
-                    <p>极光烈焰</p>
-                </div>
+                    <p>极光烈焰</p> -->
+                <!-- </div>
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/BarracudaGun.html'">
                     <div class="image-container">
@@ -1185,9 +1189,9 @@
                     </div>
 
                     <p>群星大炮</p>
-                </div>
+                </div> -->
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/SulphuricAcidCannon.html'">
+                <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/SulphuricAcidCannon.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/SulphuricAcidCannon.png" alt="SulphuricAcidCannon">
                     </div>
@@ -1313,9 +1317,9 @@
                     </div>
 
                     <p>月神Prime</p>
-                </div>
+                </div> -->
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/SpectralstormCannon.html'">
+               <!--  <div class="weapon-item" onclick="location.href='/cn/weapon/SpectralstormCannon.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/SpectralstormCannon.png" alt="SpectralstormCannon">
                     </div>
@@ -1441,9 +1445,9 @@
                     </div>
 
                     <p>雪球机关枪</p>
-                </div>
+                </div> -->
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/ArterialAssault.html'">
+               <!--  <div class="weapon-item" onclick="location.href='/cn/weapon/ArterialAssault.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/ArterialAssault.png" alt="ArterialAssault">
                     </div>
@@ -1609,9 +1613,9 @@
                     </div>
 
                     <p>赤陨霸龙弓</p>
-                </div>
+                </div> -->
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/Condemnation.html'">
+                <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/Condemnation.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/Condemnation.png" alt="Condemnation">
                     </div>
@@ -1697,7 +1701,7 @@
                     </div>
 
                     <p>等离子步枪</p>
-                </div>
+                </div> -->
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/SHPC.html'">
                     <div class="image-container">
@@ -1707,7 +1711,7 @@
                     <p>SHPC</p>
                 </div>
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/EternalBlizzard.html'">
+                <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/EternalBlizzard.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/EternalBlizzard.png" alt="EternalBlizzard">
                     </div>
@@ -1729,7 +1733,7 @@
                     </div>
 
                     <p>海妖克拉肯</p>
-                </div>
+                </div> -->
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/GrandGuardian.html'">
                     <div class="image-container">
@@ -1755,13 +1759,13 @@
                     <p>禅心剑</p>
                 </div>
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/Lucrecia.html'">
+                <!-- <div class="weapon-item" onclick="location.href='/cn/weapon/Lucrecia.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/Lucrecia.png" alt="Lucrecia">
                     </div>
 
                     <p>卢克雷西亚</p>
-                </div>
+                </div> -->
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/MirrorBlade.html'">
                     <div class="image-container">
@@ -1843,13 +1847,13 @@
                     <p>刺花长矛</p>
                 </div>
 
-                <div class="weapon-item" onclick="location.href='/cn/weapon/Eviscerator.html'">
+               <!--  <div class="weapon-item" onclick="location.href='/cn/weapon/Eviscerator.html'">
                     <div class="image-container">
                         <img src="/cn/weapon/Eviscerator.png" alt="Eviscerator">
                     </div>
 
                     <p>开膛者</p>
-                </div>
+                </div> -->
 
                 <div class="weapon-item" onclick="location.href='/cn/weapon/Basher.html'">
                     <div class="image-container">
@@ -2715,4 +2719,5 @@
         &copy; 2024 CalamityOverhaul Wiki. 保留所有权利.
     </footer>
 </body>
+
 </html>
