--- a/cn/weapon/SeasonalKunai.html
+++ b/cn/weapon/SeasonalKunai.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>季节苦无</h1>
             <p> 
-                季节苦无是一把月球领主后的盗贼武器<br>
+                季节苦无是一把月球领主后的盗贼武器，由材料合成<br>
                 左键丢出三枚可追踪的季节苦无<br>
                 潜伏攻击丢出若干大型苦无，穿透路径上的敌人，并在飞行末端短暂停留后分裂，爆出更多季节苦无追踪敌人<br>
                 苦无在击中敌人时附加灵液减益<br>
