--- a/cn/weapon/BlossomFlux.html
+++ b/cn/weapon/BlossomFlux.html
@@ -49,7 +49,7 @@
             <img src="BlossomFlux.gif" alt="BlossomFlux" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Blossom_Flux">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
