--- a/cn/weapon/DeathsAscension.html
+++ b/cn/weapon/DeathsAscension.html
@@ -48,7 +48,7 @@
             <img src="DeathsAscension.gif" alt="DeathsAscension" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Death%27s_Ascension">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
