--- a/cn/weapon/TheBurningSky.html
+++ b/cn/weapon/TheBurningSky.html
@@ -48,7 +48,7 @@
             <img src="TheBurningSky.gif" alt="TheBurningSky" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/The_Burning_Sky">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
