--- a/cn/weapon/TheMaelstrom.html
+++ b/cn/weapon/TheMaelstrom.html
@@ -50,7 +50,7 @@
             <img src="TheMaelstrom.gif" alt="TheMaelstrom" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/The_Maelstrom">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
