--- a/cn/weapon/TitanArm.html
+++ b/cn/weapon/TitanArm.html
@@ -47,7 +47,7 @@
             <img src="TitanArm.gif" alt="TitanArm" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
             <button id ="href_button">
-                <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
+                <a href="https://calamitymod.wiki.gg/wiki/Titan_Arm">查看原版信息</a>
             </button>
             <button id ="href_button">
                 <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
