--- a/cn/weapon/WraithKunai.html
+++ b/cn/weapon/WraithKunai.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>幽魂苦无</h1>
             <p> 
-                幽魂苦无是一把月球领主后的盗贼武器，<br>
+                幽魂苦无是一把月球领主后的盗贼武器，由材料合成<br>
                 左键投掷三枚可追踪的幽魂苦无<br>
                 潜伏攻击向四周丢出一片幽灵匕首，短暂悬停后冲向敌人<br>
                 苦无会对目标施加着火了！减益<br>
