--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <main class="main-content">
             <img src="/asset/IntactLogo.png" alt="Logo">
             <h1>欢迎来到灾厄大修Wiki</h1>
-            <p>这是一个为灾厄大修玩家和开发者提供的资料库，您可以在这里查询关于模组内容的各种信息</p>
-            
+            <p>这是一个为灾厄大修玩家和开发者提供的资料库，您可以在这里查询关于模组内容的各种信息 (--当前维基并未制作完成，如果发现错误之处或者未完成的页面请见谅--)</p>
+
             <div class="categories">
                 <section class="category" id = "1">
                     <img src="/asset/weapon/DragonsWord.png" alt="武器图标">
