--- a/cn/weapon/DevilsDevastation.html
+++ b/cn/weapon/DevilsDevastation.html
@@ -57,7 +57,7 @@
         </main>
 
         <div class="image-block">
-            <h1 class="img-Item-Title">d:\CalamityMod\Items\Weapons\Melee\DevilsDevastation.png</h1>
+            <h1 class="img-Item-Title">破灭魔王剑</h1>
             <img src="DevilsDevastation.png" alt="DevilsDevastation">
             <p class="item-id">内部名: DevilsDevastation</p>
             <p class="item-property">基本属性</p>
