--- a/cn/weapon/HandGun.html
+++ b/cn/weapon/HandGun.html
@@ -39,12 +39,10 @@
         <main class="main-content">
             <h1>手枪</h1>
             <p> 
-                手枪是一把.....的....武器，掉落.....<br>
+                手枪是一把困难模式前的枪类武器，掉落.....<br>
                 更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                更多具体描述...<br>
-                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">传奇</a>
+                
+                它的最佳前缀是<a href="https://terraria.wiki.gg/zh/wiki/%E4%BF%AE%E9%A5%B0%E8%AF%AD" class="clickable-word">虚幻</a>
             </p>
             <img src="HandGun.png" alt="HandGun" class="pwertGIF" loading="lazy">
             <p class="extra-tip"></p>
@@ -67,8 +65,7 @@
             <p class="item-property">物品介绍</p>
             <p class="item-description">
                 这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述<br>
-                这里是物品在游戏中的描述
+                
             </p>
         </div>        
     </div>
